--- a/index.html
+++ b/index.html
@@ -1,200 +1,325 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
-<meta charset="UTF-8">
-<title>AI 行事曆 + 聊天助手（GPT-4o mini 匿名版）</title>
+  <meta charset="UTF-8" />
+  <title>AI Schedule（GPT-4o mini 匿名版）</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: "Segoe UI", sans-serif;
+      background: #0a0f24;
+      color: #e2e8f0;
+      display: flex;
+      justify-content: center;
+      padding: 40px;
+    }
 
-<style>
-  body {
-    margin: 0;
-    background: #0a0f24;
-    color: #e2e8f0;
-    font-family: "Segoe UI", sans-serif;
-    padding: 40px;
-    display: flex;
-    justify-content: center;
-  }
+    .container {
+      width: 100%;
+      max-width: 780px;
+      background: rgba(20, 30, 60, 0.6);
+      padding: 30px;
+      border-radius: 18px;
+      border: 1px solid rgba(0, 200, 255, 0.3);
+      box-shadow: 0 0 20px rgba(0, 200, 255, 0.2);
+      backdrop-filter: blur(10px);
+    }
 
-  .container {
-    width: 100%;
-    max-width: 750px;
-    background: rgba(20,30,60,0.6);
-    padding: 30px;
-    border-radius: 20px;
-    border: 1px solid rgba(0,200,255,0.4);
-    box-shadow: 0 0 25px rgba(0,200,255,0.25);
-    backdrop-filter: blur(12px);
-  }
+    h1 {
+      text-align: center;
+      color: #00e8ff;
+      text-shadow: 0 0 12px #00e8ff;
+      margin-top: 0;
+      font-size: 28px;
+    }
 
-  .logo {
-    font-size: 28px;
-    font-weight: bold;
-    text-align: center;
-    color: #00eaff;
-    text-shadow: 0 0 12px #00eaff;
-  }
+    .tabs {
+      display: flex;
+      margin-bottom: 15px;
+    }
 
-  h1 {
-    text-align: center;
-    margin-top: 5px;
-    color: #8be7ff;
-  }
+    .tab {
+      flex: 1;
+      padding: 12px;
+      text-align: center;
+      cursor: pointer;
+      border: 1px solid rgba(0,200,255,0.3);
+      color: #00d9ff;
+      font-weight: bold;
+    }
 
-  #chat-box {
-    height: 420px;
-    overflow-y: auto;
-    background: rgba(255,255,255,0.06);
-    border: 1px solid rgba(0,200,255,0.35);
-    padding: 15px;
-    border-radius: 12px;
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-    margin-bottom: 15px;
-  }
+    .tab.active {
+      background: rgba(0,200,255,0.2);
+      border-bottom: 3px solid #00e5ff;
+    }
 
-  .msg {
-    padding: 12px 14px;
-    max-width: 80%;
-    border-radius: 12px;
-    font-size: 15px;
-    line-height: 1.5;
-  }
+    .section { display: none; }
+    .section.active { display: block; }
 
-  .me {
-    background: #00c2ff;
-    color: #000;
-    align-self: flex-end;
-  }
+    .upload-box {
+      border: 2px dashed #00d9ff;
+      padding: 18px;
+      border-radius: 12px;
+      text-align: center;
+      margin-bottom: 12px;
+      cursor: pointer;
+    }
 
-  .bot {
-    background: rgba(255,255,255,0.15);
-    border: 1px solid rgba(0,200,255,0.4);
-  }
+    #loading {
+      margin-top: 12px;
+      text-align: center;
+      display: none;
+    }
 
-  .chat-area {
-    display: flex;
-    gap: 10px;
-  }
+    .spinner {
+      width: 40px;
+      height: 40px;
+      border: 4px solid rgba(0,200,255,0.3);
+      border-top: 4px solid #00eaff;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+      margin: auto;
+    }
 
-  #input {
-    flex: 1;
-    padding: 12px;
-    border-radius: 10px;
-    border: none;
-    font-size: 16px;
-  }
+    @keyframes spin {
+      100% { transform: rotate(360deg); }
+    }
 
-  .img-btn {
-    width: 50px;
-    height: 50px;
-    background: rgba(0,200,255,0.35);
-    border-radius: 10px;
-    border: 1px solid rgba(0,200,255,0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-  }
+    #result {
+      white-space: pre-wrap;
+      background: rgba(255,255,255,0.08);
+      padding: 15px;
+      border-radius: 10px;
+      margin-top: 15px;
+      border: 1px solid rgba(0,200,255,0.3);
+    }
 
-  button {
-    margin-top: 15px;
-    width: 100%;
-    padding: 15px;
-    border-radius: 10px;
-    background: #00c2ff;
-    border: none;
-    font-size: 17px;
-    font-weight: bold;
-    cursor: pointer;
-  }
-</style>
+    /* Chat UI */
+    #chat-box {
+      height: 350px;
+      overflow-y: auto;
+      padding: 12px;
+      background: rgba(255,255,255,0.05);
+      border-radius: 10px;
+      border: 1px solid rgba(0,200,255,0.3);
+      margin-bottom: 12px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
 
+    .msg {
+      max-width: 80%;
+      padding: 12px;
+      border-radius: 10px;
+      line-height: 1.5;
+      font-size: 15px;
+    }
+
+    .me {
+      background: #00c2ff;
+      color: #000;
+      align-self: flex-end;
+      border-bottom-right-radius: 3px;
+    }
+
+    .bot {
+      background: rgba(255,255,255,0.15);
+      border: 1px solid rgba(0,200,255,0.4);
+      border-bottom-left-radius: 3px;
+    }
+
+    .chat-area {
+      display: flex;
+      gap: 8px;
+    }
+
+    #chat-input {
+      flex: 1;
+      padding: 12px;
+      border-radius: 10px;
+      border: none;
+      font-size: 16px;
+    }
+
+    .img-btn {
+      width: 50px;
+      height: 50px;
+      background: rgba(0,200,255,0.35);
+      border-radius: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      border: 1px solid rgba(0,200,255,0.5);
+      font-size: 22px;
+    }
+
+    button {
+      width: 100%;
+      margin-top: 12px;
+      padding: 14px;
+      font-size: 17px;
+      background: #00c2ff;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      color: #000;
+      font-weight: bold;
+    }
+  </style>
 </head>
 
 <body>
-<div class="container">
+  <div class="container">
 
-  <div class="logo">🛸 AI Schedule（GPT-4o mini）</div>
-  <h1>行事曆解析 + 看圖聊天（免 API Key）</h1>
+    <h1>AI Schedule（GPT-4o mini 匿名）</h1>
 
-  <div id="chat-box"></div>
+    <div class="tabs">
+      <div class="tab active" onclick="switchTab('calendar')">📅 行事曆解析</div>
+      <div class="tab" onclick="switchTab('chat')">💬 聊天模式</div>
+    </div>
 
-  <div class="chat-area">
-    <input id="input" placeholder="輸入訊息…" />
-    <label class="img-btn">
-      📷
-      <input id="img" type="file" accept="image/*" style="display:none;">
-    </label>
+    <!-- 行事曆解析 -->
+    <div id="calendar" class="section active">
+      <label class="upload-box">
+        <input type="file" id="img" accept="image/*" style="display:none;">
+        📸 點擊上傳行事曆圖片
+      </label>
+
+      <button onclick="analyze()">解析行事曆</button>
+
+      <div id="loading">
+        <div class="spinner"></div>
+        <div style="margin-top:8px;">AI 正在解析...</div>
+      </div>
+
+      <pre id="result"></pre>
+    </div>
+
+    <!-- 聊天 -->
+    <div id="chat" class="section">
+      <div id="chat-box"></div>
+
+      <div class="chat-area">
+        <input id="chat-input" placeholder="輸入訊息..." />
+        <label class="img-btn">
+          📷
+          <input type="file" id="chat-img" accept="image/*" style="display:none;">
+        </label>
+      </div>
+
+      <button onclick="sendChat()">送出</button>
+    </div>
   </div>
 
-  <button onclick="send()">送出</button>
-
-</div>
-
 <script>
-const API_URL = "https://openai-proxy.ayaka14732.workers.dev/v1/chat/completions";
+const API_URL = "https://openrouter.ayaka14732.workers.dev/v1/chat/completions";
 
-let imageBase64 = null;
-
-// 顯示訊息
-function addMsg(text, type) {
-  const box = document.getElementById("chat-box");
-  const m = document.createElement("div");
-  m.className = "msg " + type;
-  m.textContent = text;
-  box.appendChild(m);
-  box.scrollTop = box.scrollHeight;
+/* Tab 切換 */
+function switchTab(tab) {
+  document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
+  document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
+  document.querySelector(`.tab[onclick="switchTab('${tab}')"]`).classList.add('active');
+  document.getElementById(tab).classList.add('active');
 }
 
-// 圖片讀取
-document.getElementById("img").addEventListener("change", e => {
-  const file = e.target.files[0];
-  const reader = new FileReader();
-  reader.onload = () => {
-    imageBase64 = reader.result.split(",")[1];
-    addMsg("📷 已上傳圖片", "me");
-  };
-  reader.readAsDataURL(file);
-});
+/* 圖片轉 Base64 */
+function toBase64(file) {
+  return new Promise((resolve) => {
+    let reader = new FileReader();
+    reader.onload = () => resolve(reader.result.split(",")[1]);
+    reader.readAsDataURL(file);
+  });
+}
 
-// 傳送
-async function send() {
-  const text = document.getElementById("input").value.trim();
-  const box = document.getElementById("input");
-  box.value = "";
+/* ========= 行事曆解析 ========= */
+async function analyze() {
+  const img = document.getElementById("img").files[0];
+  if (!img) return alert("請上傳圖片");
 
-  if (!text && !imageBase64) return;
+  document.getElementById("loading").style.display = "block";
 
-  if (text) addMsg(text, "me");
+  const base64 = await toBase64(img);
 
-  addMsg("⏳ AI 正在思考…", "bot");
+  const prompt = `
+你是行事曆分析助手，請把圖片內的行程整理成：
 
-  const parts = [{ type: "text", text }];
+📅 星期  
+HH:MM-HH:MM：活動  
+`;
 
-  if (imageBase64) {
-    parts.push({
-      type: "image_url",
-      image_url: "data:image/jpeg;base64," + imageBase64
-    });
-  }
-
-  const res = await fetch(API_URL, {
+  let res = await fetch(API_URL, {
     method: "POST",
-    headers: {"Content-Type": "application/json"},
+    headers: { "Content-Type": "application/json" },
     body: JSON.stringify({
       model: "gpt-4o-mini",
-      messages: [{ role: "user", content: parts }]
+      messages: [
+        { role: "user", content: prompt },
+        { 
+          role: "user",
+          content: [
+            { type: "input_text", text: "分析這張行事曆圖片" },
+            { type: "input_image", image_url: `data:image/png;base64,${base64}` }
+          ]
+        }
+      ]
     })
   });
 
-  const json = await res.json();
-  const reply = json.choices?.[0]?.message?.content || "（AI 無法回應）";
+  let data = await res.json();
 
+  document.getElementById("loading").style.display = "none";
+  document.getElementById("result").textContent =
+    data.choices?.[0]?.message?.content || "解析失敗";
+}
+
+/* ========= 聊天 ========= */
+async function sendChat() {
+  const text = document.getElementById("chat-input").value.trim();
+  const img = document.getElementById("chat-img").files[0];
+
+  if (!text && !img) return;
+
+  addMsg(text || "📷（已上傳圖片）", "me");
+  document.getElementById("chat-input").value = "";
+
+  let parts = [];
+  if (text) parts.push({ type: "input_text", text });
+
+  if (img) {
+    const base64 = await toBase64(img);
+    parts.push({
+      type: "input_image",
+      image_url: `data:image/png;base64,${base64}`
+    });
+    document.getElementById("chat-img").value = "";
+  }
+
+  let res = await fetch(API_URL, {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({
+      model: "gpt-4o-mini",
+      messages: [
+        { role: "user", content: parts }
+      ]
+    })
+  });
+
+  let data = await res.json();
+  let reply = data.choices?.[0]?.message?.content || "（AI 無法回應）";
   addMsg(reply, "bot");
+}
 
-  imageBase64 = null;
-  document.getElementById("img").value = "";
+/* UI 新增訊息 */
+function addMsg(text, type) {
+  const box = document.getElementById("chat-box");
+  const div = document.createElement("div");
+  div.className = "msg " + type;
+  div.textContent = text;
+  box.appendChild(div);
+  box.scrollTop = box.scrollHeight;
 }
 </script>
 
