--- a/index.html
+++ b/index.html
@@ -1,327 +1,151 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
-  <meta charset="UTF-8" />
-  <title>AI Schedule（GPT-4o mini 匿名版）</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: "Segoe UI", sans-serif;
-      background: #0a0f24;
-      color: #e2e8f0;
-      display: flex;
-      justify-content: center;
-      padding: 40px;
-    }
+<meta charset="UTF-8" />
+<title>AI 行程助理（免費 / 讀圖片）</title>
+<script src="https://cdn.jsdelivr.net/npm/@mlc-ai/web-llm@latest/dist/index.min.js"></script>
 
-    .container {
-      width: 100%;
-      max-width: 780px;
-      background: rgba(20, 30, 60, 0.6);
-      padding: 30px;
-      border-radius: 18px;
-      border: 1px solid rgba(0, 200, 255, 0.3);
-      box-shadow: 0 0 20px rgba(0, 200, 255, 0.2);
-      backdrop-filter: blur(10px);
-    }
-
-    h1 {
-      text-align: center;
-      color: #00e8ff;
-      text-shadow: 0 0 12px #00e8ff;
-      margin-top: 0;
-      font-size: 28px;
-    }
-
-    .tabs {
-      display: flex;
-      margin-bottom: 15px;
-    }
-
-    .tab {
-      flex: 1;
-      padding: 12px;
-      text-align: center;
-      cursor: pointer;
-      border: 1px solid rgba(0,200,255,0.3);
-      color: #00d9ff;
-      font-weight: bold;
-    }
-
-    .tab.active {
-      background: rgba(0,200,255,0.2);
-      border-bottom: 3px solid #00e5ff;
-    }
-
-    .section { display: none; }
-    .section.active { display: block; }
-
-    .upload-box {
-      border: 2px dashed #00d9ff;
-      padding: 18px;
-      border-radius: 12px;
-      text-align: center;
-      margin-bottom: 12px;
-      cursor: pointer;
-    }
-
-    #loading {
-      margin-top: 12px;
-      text-align: center;
-      display: none;
-    }
-
-    .spinner {
-      width: 40px;
-      height: 40px;
-      border: 4px solid rgba(0,200,255,0.3);
-      border-top: 4px solid #00eaff;
-      border-radius: 50%;
-      animation: spin 1s linear infinite;
-      margin: auto;
-    }
-
-    @keyframes spin {
-      100% { transform: rotate(360deg); }
-    }
-
-    #result {
-      white-space: pre-wrap;
-      background: rgba(255,255,255,0.08);
-      padding: 15px;
-      border-radius: 10px;
-      margin-top: 15px;
-      border: 1px solid rgba(0,200,255,0.3);
-    }
-
-    /* Chat UI */
-    #chat-box {
-      height: 350px;
-      overflow-y: auto;
-      padding: 12px;
-      background: rgba(255,255,255,0.05);
-      border-radius: 10px;
-      border: 1px solid rgba(0,200,255,0.3);
-      margin-bottom: 12px;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-
-    .msg {
-      max-width: 80%;
-      padding: 12px;
-      border-radius: 10px;
-      line-height: 1.5;
-      font-size: 15px;
-    }
-
-    .me {
-      background: #00c2ff;
-      color: #000;
-      align-self: flex-end;
-      border-bottom-right-radius: 3px;
-    }
-
-    .bot {
-      background: rgba(255,255,255,0.15);
-      border: 1px solid rgba(0,200,255,0.4);
-      border-bottom-left-radius: 3px;
-    }
-
-    .chat-area {
-      display: flex;
-      gap: 8px;
-    }
-
-    #chat-input {
-      flex: 1;
-      padding: 12px;
-      border-radius: 10px;
-      border: none;
-      font-size: 16px;
-    }
-
-    .img-btn {
-      width: 50px;
-      height: 50px;
-      background: rgba(0,200,255,0.35);
-      border-radius: 10px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-      border: 1px solid rgba(0,200,255,0.5);
-      font-size: 22px;
-    }
-
-    button {
-      width: 100%;
-      margin-top: 12px;
-      padding: 14px;
-      font-size: 17px;
-      background: #00c2ff;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      color: #000;
-      font-weight: bold;
-    }
-  </style>
+<style>
+body {
+  background: #0a0f24;
+  color: #e2e8f0;
+  display: flex;
+  justify-content: center;
+  font-family: Arial;
+  padding: 30px;
+}
+.container {
+  width: 100%;
+  max-width: 700px;
+  background: rgba(255,255,255,0.05);
+  padding: 25px;
+  border-radius: 15px;
+  border: 1px solid #00d9ff;
+  box-shadow: 0 0 15px rgba(0,200,255,0.25);
+}
+h1 {
+  text-align: center;
+  color: #00eaff;
+  text-shadow: 0 0 10px #00eaff;
+}
+#chat {
+  height: 360px;
+  overflow-y: auto;
+  padding: 12px;
+  border: 1px solid #00bcd4;
+  border-radius: 10px;
+  background: rgba(255,255,255,0.07);
+  margin-bottom: 12px;
+}
+.msg {
+  margin: 8px 0;
+  padding: 10px;
+  border-radius: 8px;
+  max-width: 80%;
+}
+.me {
+  background: #00bcd4;
+  color: #000;
+  margin-left: auto;
+}
+.bot {
+  background: rgba(255,255,255,0.15);
+  border: 1px solid #00d9ff;
+}
+input, button {
+  padding: 12px;
+  width: 100%;
+  margin-top: 8px;
+  border-radius: 8px;
+  border: none;
+}
+button {
+  background: #00c2ff;
+  color: black;
+  font-weight: bold;
+}
+button:hover {
+  background: #00e1ff;
+}
+</style>
 </head>
 
 <body>
-  <div class="container">
+<div class="container">
+  <h1>AI 行程助理（讀圖片）</h1>
 
-    <h1>AI Schedule（GPT-4o mini 匿名）</h1>
+  <div id="chat"></div>
 
-    <div class="tabs">
-      <div class="tab active" onclick="switchTab('calendar')">📅 行事曆解析</div>
-      <div class="tab" onclick="switchTab('chat')">💬 聊天模式</div>
-    </div>
+  <input type="file" id="img" accept="image/*">
+  <input id="text" placeholder="輸入訊息..." />
 
-    <!-- 行事曆解析 -->
-    <div id="calendar" class="section active">
-      <label class="upload-box">
-        <input type="file" id="img" accept="image/*" style="display:none;">
-        📸 點擊上傳行事曆圖片
-      </label>
-
-      <button onclick="analyze()">解析行事曆</button>
-
-      <div id="loading">
-        <div class="spinner"></div>
-        <div style="margin-top:8px;">AI 正在解析...</div>
-      </div>
-
-      <pre id="result"></pre>
-    </div>
-
-    <!-- 聊天 -->
-    <div id="chat" class="section">
-      <div id="chat-box"></div>
-
-      <div class="chat-area">
-        <input id="chat-input" placeholder="輸入訊息..." />
-        <label class="img-btn">
-          📷
-          <input type="file" id="chat-img" accept="image/*" style="display:none;">
-        </label>
-      </div>
-
-      <button onclick="sendChat()">送出</button>
-    </div>
-  </div>
+  <button onclick="send()">送出</button>
+</div>
 
 <script>
-const API_URL = "https://openrouter.ayaka14732.workers.dev/v1/chat/completions";
+let model;
 
-/* Tab 切換 */
-function switchTab(tab) {
-  document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
-  document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
-  document.querySelector(`.tab[onclick="switchTab('${tab}')"]`).classList.add('active');
-  document.getElementById(tab).classList.add('active');
-}
+// 初始化模型
+(async () => {
+  add("⏳ 正在載入 AI 模型…（約 5~10 秒）", "bot");
+  model = await webllm.CreateMLCEngine(
+    "Phi-3.5-vision-instruct-q4f32_1-MLC", 
+    { reinit: true }
+  );
+  add("✨ 模型載入完成！你可以開始聊天或上傳行程圖片。", "bot");
+})();
 
-/* 圖片轉 Base64 */
-function toBase64(file) {
-  return new Promise((resolve) => {
-    let reader = new FileReader();
-    reader.onload = () => resolve(reader.result.split(",")[1]);
-    reader.readAsDataURL(file);
-  });
-}
-
-/* ========= 行事曆解析 ========= */
-async function analyze() {
-  const img = document.getElementById("img").files[0];
-  if (!img) return alert("請上傳圖片");
-
-  document.getElementById("loading").style.display = "block";
-
-  const base64 = await toBase64(img);
-
-  const prompt = `
-你是行事曆分析助手，請把圖片內的行程整理成：
-
-📅 星期  
-HH:MM-HH:MM：活動  
-`;
-
-  let res = await fetch(API_URL, {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({
-      model: "gpt-4o-mini",
-      messages: [
-        { role: "user", content: prompt },
-        { 
-          role: "user",
-          content: [
-            { type: "input_text", text: "分析這張行事曆圖片" },
-            { type: "input_image", image_url: `data:image/png;base64,${base64}` }
-          ]
-        }
-      ]
-    })
-  });
-
-  let data = await res.json();
-
-  document.getElementById("loading").style.display = "none";
-  document.getElementById("result").textContent =
-    data.choices?.[0]?.message?.content || "解析失敗";
-}
-
-/* ========= 聊天 ========= */
-async function sendChat() {
-  const text = document.getElementById("chat-input").value.trim();
-  const img = document.getElementById("chat-img").files[0];
-
-  if (!text && !img) return;
-
-  addMsg(text || "📷（已上傳圖片）", "me");
-  document.getElementById("chat-input").value = "";
-
-  let parts = [];
-  if (text) parts.push({ type: "input_text", text });
-
-  if (img) {
-    const base64 = await toBase64(img);
-    parts.push({
-      type: "input_image",
-      image_url: `data:image/png;base64,${base64}`
-    });
-    document.getElementById("chat-img").value = "";
-  }
-
-  let res = await fetch(API_URL, {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({
-      model: "gpt-4o-mini",
-      messages: [
-        { role: "user", content: parts }
-      ]
-    })
-  });
-
-  let data = await res.json();
-  let reply = data.choices?.[0]?.message?.content || "（AI 無法回應）";
-  addMsg(reply, "bot");
-}
-
-/* UI 新增訊息 */
-function addMsg(text, type) {
-  const box = document.getElementById("chat-box");
+function add(text, who) {
+  const box = document.getElementById("chat");
   const div = document.createElement("div");
-  div.className = "msg " + type;
+  div.className = "msg " + who;
   div.textContent = text;
   box.appendChild(div);
   box.scrollTop = box.scrollHeight;
 }
-</script>
 
+async function send() {
+  const text = document.getElementById("text").value;
+  const img = document.getElementById("img").files[0];
+
+  if (!text && !img) return;
+
+  // 顯示自己的訊息
+  if (text) add(text, "me");
+  if (img) add("📷 已上傳行程圖片", "me");
+
+  document.getElementById("text").value = "";
+
+  // 處理圖片
+  let imageBase64 = null;
+  if (img) {
+    imageBase64 = await new Promise((resolve) => {
+      const reader = new FileReader();
+      reader.onload = () => resolve(reader.result.split(",")[1]);
+      reader.readAsDataURL(img);
+    });
+  }
+
+  // AI 回應
+  const prompt = text || "請幫我閱讀這張行事曆圖片，整理成行程。";
+
+  const response = await model.chat.completions.create({
+    messages: [
+      { role: "user", content: prompt },
+      ...(imageBase64
+        ? [{
+            role: "user",
+            content: [
+              { type: "text", text: prompt },
+              { type: "image", image: imageBase64 },
+            ],
+          }]
+        : [])
+    ]
+  });
+
+  add(response.choices[0].message.content, "bot");
+}
+</script>
 </body>
 </html>
